--- a/application/index/view/index/ActivitiesCateList.html
+++ b/application/index/view/index/ActivitiesCateList.html
@@ -105,5 +105,8 @@
 
 <!--Custom JavaScript-->
 <script src="/static/app/index/js/custom.js"></script>
+<script>
+    $('.lac').css('background','#2DCC70');
+</script>
 {/block}
 
