--- a/application/index/view/index/foodDetail.html
+++ b/application/index/view/index/foodDetail.html
@@ -385,5 +385,10 @@
         big.style.display = 'none';
     }
 
+    $(function(){
+        $('.lfood').css('background','#2DCC70');
+    });
+
 </script>
+
 {/block}
