--- a/application/index/view/index/hotelDetail.html
+++ b/application/index/view/index/hotelDetail.html
@@ -275,5 +275,8 @@
         $(".big_pic li").removeClass("on");
         $(".big_pic li:nth-child("+preNumber+")").addClass("on");
     });
+    $(function(){
+        $('.lhotel').css('background','#2DCC70');
+    });
 </script>
 {/block}
