--- a/application/index/view/index/routeDetail.html
+++ b/application/index/view/index/routeDetail.html
@@ -379,5 +379,8 @@
             return true;
         }
     }
+    $(function(){
+        $('.lroute').css('background','#2DCC70');
+    });
 </script>
 {/block}
