--- a/application/index/view/index/sceneryDetail.html
+++ b/application/index/view/index/sceneryDetail.html
@@ -372,5 +372,8 @@
             return true;
         }
     }
+    $(function(){
+        $('.lsc').css('background','#2DCC70');
+    });
 </script>
 {/block}
