--- a/application/index/view/index/ActivitiesDetails.html
+++ b/application/index/view/index/ActivitiesDetails.html
@@ -1,6 +1,6 @@
 {extend name="index/index"}
 {block name="main"}
-
+<p style="display: none" id="type">{$type}</p>
 
     <link href="style.css" rel="stylesheet">
     <!-- Color CSS -->
@@ -130,31 +130,31 @@
 
         <form action="{:url('/activitiesregister', ['id'=>$details.activities_id])}" method="post" id="form">
           <div class="form-group">
-            <label for="exampleInputEmail1"><h6>参与的活动名称：{$details.ac_title}</h6></label>
+            <label ><h6>参与的活动名称：{$details.ac_title}</h6></label>
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">请选择活动使用的起始日期</label>
-            <input type="date" class="form-control" name="opentime"  id="exampleInputPassword1" >
-            <input type="date" class="form-control" name="closetime" id="exampleInputPassword1" >
-          </div>
-
-          <div class="form-group">
-            <label for="exampleInputEmail1">活动参与人数：</label>
-            <input type="text" class="form-control" id="exampleInputPassword1" name="amount" placeholder="请填写活动参与的人数">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputEmail1">报名人：</label>
-            <input type="text" class="form-control" id="exampleInputPassword1" name="condinator" placeholder="请填写实际报名人信息">
+            <label >请选择活动使用的起始日期</label>
+            <input type="date" class="form-control" name="opentime"   >
+            <input type="date" class="form-control" name="closetime"  >
           </div>
 
           <div class="form-group">
-            <label for="exampleInputEmail1">联系方式：</label>
-            <input type="text" class="form-control" id="exampleInputPassword1" name="contact" placeholder="报名确认成功后会有短信通知">
+            <label >活动参与人数：</label>
+            <input type="text" class="form-control"  name="amount" placeholder="请填写活动参与的人数">
+          </div>
+          <div class="form-group">
+            <label >报名人：</label>
+            <input type="text" class="form-control"  name="condinator" placeholder="请填写实际报名人信息">
+          </div>
+
+          <div class="form-group">
+            <label >联系方式：</label>
+            <input type="text" class="form-control"  name="contact" placeholder="报名确认成功后会有短信通知">
           </div>
 
            <div class="form-group">
-            <label for="exampleInputEmail1">备注：</label>
-            <input type="text" class="form-control" id="exampleInputPassword1" name="comments" placeholder="如有信息需要备注，请填写备注信息">
+            <label >备注：</label>
+            <input type="text" class="form-control"  name="comments" placeholder="如有信息需要备注，请填写备注信息">
           </div>
           <button type="submit" class="btn btn-default">提交</button>
         </form>
@@ -166,7 +166,7 @@
   </div>
 </div>
 
-
+</div>
 {/block}
 
 {block name="myjs"}
@@ -224,9 +224,8 @@
           // alert("Submitted");
           // return false;
         });
-    
+    $('.lac').css('background','#2DCC70');
 </script>
-
 
 
 
