--- a/application/index/view/index/ActivitiesList.html
+++ b/application/index/view/index/ActivitiesList.html
@@ -1,6 +1,6 @@
 {extend name="index/index"}
 {block name="main"}
-
+<p style="display: none" id="type">{$type}</p>
     <!--Sub Banner Wrap Start -->
     <div class="gt_sub_banner_bg default_width">
         <div class="container">
@@ -87,7 +87,7 @@
                 <!--Product List Wrap End-->
 
             </div>
-        </section>
+        </div></section>
         <!--Our Latest Product Wrap End-->
     </div>
 
@@ -113,5 +113,8 @@
 
 <!--Custom JavaScript-->
 <script src="/static/app/index/js/custom.js"></script>
+<script>
+    $('.lac').css('background','#2DCC70');
+</script>
 {/block}
 
