--- a/application/index/view/index/hotelDetail.html
+++ b/application/index/view/index/hotelDetail.html
@@ -64,7 +64,7 @@
                             {volist name="photos" id="p"}
                             <li class="on"><a href="javascript:void(0);">
                                 <img src="/uploads/{$p.pic}" title="" />
-                                <span class="txt">酒店房间图片说明2</span></a>
+                                <span class="txt"></span></a>
                             </li>
                             {/volist}
                         </ul>
