--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -632,6 +632,8 @@
             </div>
 
             <!--Gallery List Wrap Start-->
+            <div class="container">
+
             {volist name="activitiesindex" id="v"}
             <div class="col-md-3 col-sm-6 no_padding">
                 <div class="gt_gallery_style1">
@@ -648,7 +650,7 @@
                 </div>
             </div>
             {/volist}
-
+            </div>
             <!--Gallery List Wrap End-->
         </section>
 
