--- a/application/index/view/index/list.html
+++ b/application/index/view/index/list.html
@@ -121,9 +121,9 @@
                                 </ul>
                                 <h6><a href="{:url('/goodsdetail',['id'=>$list.id,'bus_id'=>$list.bus_id,'cid'=>$list.c_id])}">{$list.gd_title}</a></h6>
                                 <p>{$list.gd_abstract}</p>
-                                <a href="{:url('/goodsdetail',['id'=>$list.id,'bus_id'=>$list.bus_id,'cid'=>$list.c_id])}">Read More</a>
+                                <a href="{:url('/goodsdetail',['id'=>$list.id,'bus_id'=>$list.bus_id,'cid'=>$list.c_id])}">查看更多</a>
                                 <div class="gt_listing_share_wrap">
-                                    <button class="gt_listing_share"><i class="fa fa-share-alt"></i></button>
+                                    <!--<button class="gt_listing_share"><i class="fa fa-share-alt"></i></button>-->
                                     <ul class="gt_scl_icon">
                                         <li><a class="bg_fb" href="{:url('/goodsdetail',['id'=>$list.id,'bus_id'=>$list.bus_id,'cid'=>$list.c_id])}"><i class="fa fa-facebook"></i></a></li>
                                         <li><a class="bg_twitter" href="{:url('/goodsdetail',['id'=>$list.id,'bus_id'=>$list.bus_id,'cid'=>$list.c_id])}"><i class="fa fa-twitter"></i></a></li>
