--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -482,7 +482,7 @@
                 <!--Cart Wrap Start-->
                 {if condition="!empty(input('session.u_id'))"}
                 <div class="gt_cart_wrap">
-                    <a href="{:url('/showCart')}"><i class="fa fa-cart-arrow-down"></i>&nbsp 购物车</a>
+                    <a href="{:url('/showCart')}" class="lcart"><i class="fa fa-cart-arrow-down"></i>&nbsp 购物车</a>
                     <div class="gt_cart_list">
                         <ul>
                             {volist name="shopcart" id="v"}
