--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -944,8 +944,7 @@
                 <!--Heading Wrap Start-->
                 <div class="gt_hdg_1 default_width">
                     <h3>旅游咨询</h3>
-                    <p>Aenean commodo ligal geate dolor. Aenan massa. Loren ipsum dolor sit amet,color<br>tetuer adiois
-                        elit, aliquam eget nibh etibra</p>
+                    <p>最新的新闻</p>
                     <span class="gt_hdg_left"></span>
                     <i class="icon-school"></i>
                     <span class="gt_hdg_right"></span>
@@ -964,17 +963,17 @@
                             <ul>
                                 <li>
                                     <div class="gt_event_date">
-                                        <h3>01</h3>
+                                        <h3>21</h3>
                                         <span>Aug</span>
                                     </div>
                                     <div class="gt_event_des">
-                                        <h4><a href="#">标题</a></h4>
+                                        <h4><a href="http://www.cntour2.com/viewnews/2017/08/21/7LZMeISTbksqvo43nK0N0.shtml">《湖北省红色旅游指南》出版发行 推荐37条红色旅游线路</a></h4>
                                         <ul class="gt_event_meta">
-                                            <li><i class="fa fa-clock-o"></i>发布时间</li>
-                                            <li><i class="fa fa-location-arrow"></i>新闻位置</li>
+                                            <li><i class="fa fa-clock-o"></i> 2017-08-21 09:04:02</li>
+                                            <li><i class="fa fa-location-arrow"></i>湖北</li>
                                         </ul>
-                                        <p>概述</p>
-                                        <a href="#">详细内容</a>
+                                        <p>由省委党史研究室和省旅游发展委员会编纂的《湖北省红色旅游指南》一书出版发行，精心为读者推出37条红色旅游线路。</p>
+                                        <a href="http://www.cntour2.com/viewnews/2017/08/21/7LZMeISTbksqvo43nK0N0.shtml">详细内容</a>
                                     </div>
                                 </li>
 
